Fix the .yaml file to remove the 'user' tags from the 'experiment' routes.
